--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ black = "^23.1.0"
 flake8 = "^6.0.0"
 isort = "^5.12.0"
 flake8-pyproject = "^1.2.2"
+waitress = "^2.1.2"
 
 [build-system]
 requires = ["poetry-core"]
